Adapt to foreign API changes of Java 21
- Bump gradle to 8.4-rc-1 to support java 21
- Adjust padding memory layouts from bits to bytes
- use the new reinterpret function to dereference native pointers
- Add missing gradle-wrapper.jar